Task 3 - Add Newline character as separator

--- a/CalculatorConsoleApplication/Properties/launchSettings.json
+++ b/CalculatorConsoleApplication/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CalculatorConsoleApplication": {
       "commandName": "Project",
-      "commandLineArgs": "add 4,7,3,4,7,3,5,6,7,4,3,2,5,7,5,3,4,6,7,8,9,5,5,5,4,3,2"
+      "commandLineArgs": "add 2\\n3,4"
     }
   }
 }
