Task 4 - Added delimiters

--- a/CalculatorConsoleApplication/Properties/launchSettings.json
+++ b/CalculatorConsoleApplication/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CalculatorConsoleApplication": {
       "commandName": "Project",
-      "commandLineArgs": "add 2\\n3,4"
+      "commandLineArgs": "add \\\\;\\\\3;4;5"
     }
   }
 }
