Task 5 - Not allow Negative numbers

--- a/CalculatorConsoleApplication/Properties/launchSettings.json
+++ b/CalculatorConsoleApplication/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CalculatorConsoleApplication": {
       "commandName": "Project",
-      "commandLineArgs": "add \\\\;\\\\3;4;5"
+      "commandLineArgs": "add \\\\,\\\\2,7,-3,5,-2"
     }
   }
 }
